insert menu handling